# flutter_whisper.cpp

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/whisper_gpt/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist  Runner-Bridging-Header.h  bridge_generated.h  main
ios/Runner.xcodeproj/: project.pbxproj
lib/: audio_player.dart  bridge_generated.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Release.entitlements  bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rs_whisper_gpt/: Cargo.toml  build.rs
rs_whisper_gpt/rs_whisper_gpt.xcodeproj/: project.pbxproj
rs_whisper_gpt/rs_whisper_gpt.xcodeproj/xcuserdata/lyledean.xcuserdatad/xcschemes/: xcschememanagement.plist
rs_whisper_gpt/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
